--- a/AutomaticYoutubeVideoDownloaderAndConverter/AutomaticYoutubeVideoDownloaderAndConverter.csproj
+++ b/AutomaticYoutubeVideoDownloaderAndConverter/AutomaticYoutubeVideoDownloaderAndConverter.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Mpgrabber.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="MpgrabberSettings.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -125,6 +126,12 @@
       <Isolated>False</Isolated>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="MpgrabberSettings.xml">
+      <SubType>Designer</SubType>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
